tests/snapshots/parser__unclosed_parenthesis_in_parenthesized_expression.snap
---
source: tests/parser.rs
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 0,
        },
        source: "(1+1",
        is_complex: false,
        body: [],
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "Expected `)` but found `EOF`",
                labels: Some(
                    [
                        LabeledSpan {
                            label: Some(
                                "Here",
                            ),
                            span: SourceSpan {
                                offset: SourceOffset(
                                    4,
                                ),
                                length: 0,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: None,
                severity: Error,
            },
        },
    ],
    panicked: true,
}
