tests/snapshots/parser__variable_c.snap
---
source: tests/parser.rs
expression: out
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 5,
        },
        source: "c.foo",
        body: Simple(
            Variable(
                VariableExpression {
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                    lifetime: Context,
                    member: Property {
                        property: IdentifierReference {
                            span: Span {
                                start: 2,
                                end: 5,
                            },
                            name: "foo",
                        },
                    },
                },
            ),
        ),
    },
    errors: [],
    panicked: false,
}
