tests/snapshots/parser__variable_context.snap
---
source: tests/parser.rs
expression: out
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 11,
        },
        source: "context.foo",
        body: Simple(
            Variable(
                VariableExpression {
                    span: Span {
                        start: 0,
                        end: 11,
                    },
                    lifetime: Context,
                    member: Property {
                        property: Identifier {
                            span: Span {
                                start: 8,
                                end: 11,
                            },
                            name: "foo",
                        },
                    },
                },
            ),
        ),
    },
    errors: [],
    panicked: false,
}
