tests/snapshots/parser__variable_t.snap
---
source: tests/parser.rs
expression: out
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 5,
        },
        source: "t.foo",
        body: Simple(
            Variable(
                VariableExpression {
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                    lifetime: Temporary,
                    member: Property {
                        property: IdentifierReference {
                            span: Span {
                                start: 2,
                                end: 5,
                            },
                            name: "foo",
                        },
                    },
                },
            ),
        ),
    },
    errors: [],
    panicked: false,
}
