tests/snapshots/parser__variable_temp.snap
---
source: tests/parser.rs
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 8,
        },
        source: "temp.foo",
        is_complex: false,
        body: Vec(
            [
                Variable(
                    VariableExpression {
                        span: Span {
                            start: 0,
                            end: 8,
                        },
                        lifetime: Temporary,
                        member: Property {
                            span: Span {
                                start: 0,
                                end: 8,
                            },
                            property: IdentifierReference {
                                span: Span {
                                    start: 5,
                                    end: 8,
                                },
                                name: "foo",
                            },
                        },
                    },
                ),
            ],
        ),
    },
    errors: [],
    panicked: false,
}
