tests/snapshots/parser__weird_variable_members.snap
---
source: tests/parser.rs
expression: out
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 46,
        },
        source: "variable.v.temp.t.context.c.query.q.math.a.b.c",
        body: Simple(
            Variable(
                VariableExpression {
                    span: Span {
                        start: 0,
                        end: 46,
                    },
                    lifetime: Variable,
                    member: Object {
                        span: Span {
                            start: 0,
                            end: 46,
                        },
                        object: Object {
                            span: Span {
                                start: 0,
                                end: 44,
                            },
                            object: Object {
                                span: Span {
                                    start: 0,
                                    end: 42,
                                },
                                object: Object {
                                    span: Span {
                                        start: 0,
                                        end: 40,
                                    },
                                    object: Object {
                                        span: Span {
                                            start: 0,
                                            end: 35,
                                        },
                                        object: Object {
                                            span: Span {
                                                start: 0,
                                                end: 33,
                                            },
                                            object: Object {
                                                span: Span {
                                                    start: 0,
                                                    end: 27,
                                                },
                                                object: Object {
                                                    span: Span {
                                                        start: 0,
                                                        end: 25,
                                                    },
                                                    object: Object {
                                                        span: Span {
                                                            start: 0,
                                                            end: 17,
                                                        },
                                                        object: Object {
                                                            span: Span {
                                                                start: 0,
                                                                end: 15,
                                                            },
                                                            object: Property {
                                                                span: Span {
                                                                    start: 0,
                                                                    end: 10,
                                                                },
                                                                property: IdentifierReference {
                                                                    span: Span {
                                                                        start: 9,
                                                                        end: 10,
                                                                    },
                                                                    name: "v",
                                                                },
                                                            },
                                                            property: IdentifierReference {
                                                                span: Span {
                                                                    start: 11,
                                                                    end: 15,
                                                                },
                                                                name: "temp",
                                                            },
                                                        },
                                                        property: IdentifierReference {
                                                            span: Span {
                                                                start: 16,
                                                                end: 17,
                                                            },
                                                            name: "t",
                                                        },
                                                    },
                                                    property: IdentifierReference {
                                                        span: Span {
                                                            start: 18,
                                                            end: 25,
                                                        },
                                                        name: "context",
                                                    },
                                                },
                                                property: IdentifierReference {
                                                    span: Span {
                                                        start: 26,
                                                        end: 27,
                                                    },
                                                    name: "c",
                                                },
                                            },
                                            property: IdentifierReference {
                                                span: Span {
                                                    start: 28,
                                                    end: 33,
                                                },
                                                name: "query",
                                            },
                                        },
                                        property: IdentifierReference {
                                            span: Span {
                                                start: 34,
                                                end: 35,
                                            },
                                            name: "q",
                                        },
                                    },
                                    property: IdentifierReference {
                                        span: Span {
                                            start: 36,
                                            end: 40,
                                        },
                                        name: "math",
                                    },
                                },
                                property: IdentifierReference {
                                    span: Span {
                                        start: 41,
                                        end: 42,
                                    },
                                    name: "a",
                                },
                            },
                            property: IdentifierReference {
                                span: Span {
                                    start: 43,
                                    end: 44,
                                },
                                name: "b",
                            },
                        },
                        property: IdentifierReference {
                            span: Span {
                                start: 45,
                                end: 46,
                            },
                            name: "c",
                        },
                    },
                },
            ),
        ),
    },
    errors: [],
    panicked: false,
}
